; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_wrk.c_socket_readable.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_wrk.c_socket_readable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64 (%struct.TYPE_9__*)*, i32 (%struct.TYPE_9__*, i64*)* }
%struct.TYPE_9__ = type { %struct.TYPE_11__*, i32, i32 }
%struct.TYPE_11__ = type { i64, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }

@sock = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8
@parser_settings = common dso_local global i32 0, align 4
@RECVBUF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*, i32)* @socket_readable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_readable(i32* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_9__*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %12, %struct.TYPE_9__** %9, align 8
  br label %13

13:                                               ; preds = %57, %4
  %14 = load i32 (%struct.TYPE_9__*, i64*)*, i32 (%struct.TYPE_9__*, i64*)** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @sock, i32 0, i32 1), align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %16 = call i32 %14(%struct.TYPE_9__* %15, i64* %10)
  switch i32 %16, label %20 [
    i32 129, label %17
    i32 130, label %18
    i32 128, label %19
  ]

17:                                               ; preds = %13
  br label %20

18:                                               ; preds = %13
  br label %60

19:                                               ; preds = %13
  br label %73

20:                                               ; preds = %13, %17
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 1
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load i64, i64* %10, align 8
  %27 = call i64 @http_parser_execute(i32* %22, i32* @parser_settings, i32 %25, i64 %26)
  %28 = load i64, i64* %10, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %20
  br label %60

31:                                               ; preds = %20
  %32 = load i64, i64* %10, align 8
  %33 = icmp eq i64 %32, 0
  br i1 %33, label %34, label %40

34:                                               ; preds = %31
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %35, i32 0, i32 1
  %37 = call i32 @http_body_is_final(i32* %36)
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %34
  br label %60

40:                                               ; preds = %34, %31
  %41 = load i64, i64* %10, align 8
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = add i64 %46, %41
  store i64 %47, i64* %45, align 8
  br label %48

48:                                               ; preds = %40
  %49 = load i64, i64* %10, align 8
  %50 = load i64, i64* @RECVBUF, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %57

52:                                               ; preds = %48
  %53 = load i64 (%struct.TYPE_9__*)*, i64 (%struct.TYPE_9__*)** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @sock, i32 0, i32 0), align 8
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %55 = call i64 %53(%struct.TYPE_9__* %54)
  %56 = icmp sgt i64 %55, 0
  br label %57

57:                                               ; preds = %52, %48
  %58 = phi i1 [ false, %48 ], [ %56, %52 ]
  br i1 %58, label %13, label %59

59:                                               ; preds = %57
  br label %73

60:                                               ; preds = %39, %30, %18
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %62 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %61, i32 0, i32 0
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 1
  %65 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 8
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %65, align 8
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %69 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %68, i32 0, i32 0
  %70 = load %struct.TYPE_11__*, %struct.TYPE_11__** %69, align 8
  %71 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %72 = call i32 @reconnect_socket(%struct.TYPE_11__* %70, %struct.TYPE_9__* %71)
  br label %73

73:                                               ; preds = %60, %59, %19
  ret void
}

declare dso_local i64 @http_parser_execute(i32*, i32*, i32, i64) #1

declare dso_local i32 @http_body_is_final(i32*) #1

declare dso_local i32 @reconnect_socket(%struct.TYPE_11__*, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
